2008-04-24  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-15
	* db: bug fix to 'insertConfiguration' regarding global psets

2008-04-23  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-14
	* converter: fix to block syntax (Ulf)

2008-04-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-13
	* diff: fix to initDatabase()

2008-04-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-12
	* converter: fix to BrowserConverter

2008-04-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-11
	* point to new HLT Development DB at CMSR
	(src/conf/conf.properties)

2008-04-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-10
	* parser: fixes
	* data: add Block, add --blocks parameter for
	ConfigurationModifier
	* converter: take blocks into account; streams&datasets PSets
	taken into account

2008-04-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-09
	* gui: provide diff of paths/sequences upon import.

2008-04-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-08
	* speed-up configuration saving (still minutes from offside
	though)
	* propagate path manipulations to OutputModules

2008-04-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-07
	* webserver/converter: additional dirs which were missing
	* gui: fix importing of sequences
	* gui: warn before removing referenced sequences

2008-04-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-06
	* webserver/converter: updates (Ulf)
	* gui: OutputModule Editor

2008-04-02  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-22-05
	* converter: python beta release
	* add --search option to diff
	* add orderedSequenceIterator() to ConfigurationModifier, to be
	utilized by pythin converters

2008-03-31  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
